<resources>
    <string name="app_name">Hot English Magazine</string>
    <string name="app_website">http://cafebazaar.ir/app/me.ali.coolenglishmagazine/</string>
    <string name="app_icon_url">http://cafebazaar.ir/media/upload/icons/me.ali.coolenglishmagazine.png</string>
    <string name="gallery_of_issues">Gallery of Issues</string>
    <string name="cool_english_times">Hot English Times</string>
    <string name="readme">Read Me</string>
    <string name="about">About</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="lock">Hide transcript</string>
    <string name="unlock">Reveal transcript</string>
    <string name="unlock_hint">Tap and hold to reveal transcript.</string>
    <string name="add_all_to_waiting_list">Add all items to Hot English Times</string>
    <string name="add_to_waiting_list">Add to Hot English Times</string>
    <string name="already_in_waiting_list">Item “%s” is already added.</string>
    <string name="view_issue_details">See magazine introduction</string>
    <string name="drag_hint">Hold and move to re-order items.</string>
    <string name="action_mode_hint">Long press item for more options.</string>
    <string name="action_settings">Preferences</string>
    <string name="title_item_list">Table of Contents</string>
    <string name="title_item_detail">Item Details</string>
    <string name="title_issue_list">Gallery of Issues</string>
    <string name="title_issue_detail">Issue Details</string>
    <string name="refresh">Refresh</string>
    <string name="add_alarm">Add new alarm</string>
    <string name="check_connection">Make sure your device is online.</string>
    <string name="login_required">باید کافه بازار نصب باشه و توش sign-in کرده باشی.</string>
    <string name="network_error">Could not connect to server.</string>
    <string name="server_message_dialog_title">Server message</string>
    <string name="upgrade_message">The “Hot English Magazine” app is old. Please upgrade to a more recent version.</string>
    <string name="update_success">Update complete!\nDon’t forget to refresh in a few days!</string>
    <string name="unzip_error">Could not write on device storage. Free space may be low.</string>
    <string name="issue_delete_confirmation_message">This will remove selected issue’s content from device storage to free up space.</string>
    <string name="issue_delete_confirmation_title">Sure?</string>
    <string name="issue_downloaded_notification">New issue downloaded. Let’s start<![CDATA[!]]></string>
    <string name="cool_english_time_notification_text_short">Hot English Time<![CDATA[!]]></string>
    <string name="cool_english_time_notification_text">You have to practise “%s” now<![CDATA[!]]></string>
    <string name="cool_english_time_notification_summary_text_0">You have not practised this item yet.</string>
    <string name="cool_english_time_notification_summary_text_1">You have practised this item 1 time so far.</string>
    <string name="cool_english_time_notification_summary_text_2">You have practised this item %d times so far.</string>
    <plurals name="pending_count">
        <item quantity="one">Remaining %d practise.</item>
        <item quantity="other">Remaining %d practises.</item>
    </plurals>
    <string name="alarm_already_exists">Alarm for this time already exists.</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="select_time">Pick a hot english time</string>
    <string name="selected_count">Selected: %d</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_language">Locale</string>
    <string-array name="pref_item_language">
        <item>English (United States)</item>
        <item>Farsi (Iran)</item>
    </string-array>
    <string-array name="pref_item_language_values">
        <item>en</item>
        <item>fa</item>
    </string-array>
    <string name="pref_title_download_plan">Download networks</string>
    <string-array name="pref_download_plan">
        <item>Wifi only</item>
        <item>Wifi and mobile data</item>
    </string-array>
    <string-array name="pref_download_plan_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_item_practice_count">Lesson practice count</string>
    <string-array name="pref_item_practice_count">
        <item>8 times per lesson</item>
        <item>12 times per lesson (recommended)</item>
        <item>15 times per lesson</item>
    </string-array>
    <string-array name="pref_item_practice_count_values">
        <item>8</item>
        <item>12</item>
        <item>15</item>
    </string-array>
    <string name="pref_title_navigate_audio_with_volume_buttons">Volume buttons navigate playback</string>
    <string-array name="pref_volume_buttons_behaviour_list_titles">
        <item>When screen is off</item>
        
        <item>Never</item>
    </string-array>
    <string-array name="pref_volume_buttons_behaviour_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_category_playback_options">Audio Playback Options</string>
    <string name="pref_category_program">The Hot English Program</string>
    <string name="pref_category_notification_options">Notification Options</string>
    <string name="pref_category_general">General Options</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_server_address">Server address</string>
    <string name="pref_default_server_address">http://alitavakol.me/hem</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_sound_enabled">Sound</string>
    <string name="pref_title_vibrate_enabled">Vibrate</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_shake_to_pause_playback">Shake to pause/resume playback (experimental)</string>
    <string name="pref_title_ringtone">Notification ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tooltips_reset">Helpful tips will popup again!</string>
    <string name="pref_summary_reset_tooltips">Show again helpful messages when appropriate.</string>
    <string name="pref_title_reset_tooltips">Reset help tips</string>
    <string name="beginnerLevel">Beginner</string>
    <string name="intermediateLevel">Intermediate</string>
    <string name="upperIntermediateLevel">Upper-Intermediate</string>
    <string name="advancedLevel">Advanced</string>
    <string name="purchase">Purchase</string>
    <string name="donate">Donate</string>
    <string name="download">Download</string>
    <string name="download_manager_disabled">Download manager service is disabled. Enable it?</string>
    <string name="download_full_text">Download Full-Text</string>
    <string name="ok">Okay</string>
    <string name="close">Okay</string>
    <string name="later">Later</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="delete_issue">Delete issue</string>
    <string name="retry_download">Retry download</string>
    <string name="complete">Complete</string>
    <string name="reopen">Incomplete</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="mark_complete">Mark issue as completed</string>
    <string name="mark_incomplete">Re-open this issue</string>
    <string name="delete_selected_alarms">Delete</string>
    <string name="delete_selected_waiting_items">Remove</string>
    <string name="delete_selected_issues">Delete</string>
    <string name="cancel_selected_issues">Cancel downloading</string>
    <string name="free_selected_issues">Free up space</string>
    <string name="download_selected_issues">Download</string>
    <string name="complete_selected_issues">Mark as complete</string>
    <string name="incomplete_selected_issues">Mark as incomplete</string>
    <string name="permanently_delete_selected_issues">Delete permanently</string>
    <string name="download_progress">%1$s / %2$s</string>
    <string name="download_failed_msg">Download failed with error code %d</string>
    <string name="syncing">Updating&#8230;</string>
    <string name="cancel_syncing">Stop</string>
    <string name="my_issues">Saved</string>
    <string name="my_issues_icon">{gmd-sd-card}</string>
    <string name="available_issues">Downloadable</string>
    <string name="available_issues_icon">{faw-cloud-download}</string>
    <string name="completed_issues">Completed</string>
    <string name="completed_issues_icon">{gmd-assignment-turned-in}</string>
    <string name="media_error">Cannot access device storage.</string>
    <string name="alarms">Times</string>
    <string name="alarms_icon">{gmd-alarm}</string>
    <string name="waiting_list">Waiting List</string>
    <string name="waiting_list_icon">{gmd-format-list-bulleted}</string>
    <string name="active_issue">Currently learning</string>
    <string name="saved_issues">Other saved issues</string>
    <string name="downloading_issues">Downloading</string>
    <string name="more_available_issues">More available magazines</string>
    <string name="deleted_issues">Deleted magazines</string>
    <string name="share_dialog_title">Would you share us?</string>
    <string name="activity_not_found">Action is not supported by device.</string>
    <string name="facebook_app_id">1288023007880543</string>
    <string name="feedback_title">Love it? Hate it? Would you like to suggest a new feature, or report a bug? We would love to hear from you.</string>
    <string name="bug">Bug</string>
    <string name="question">Question</string>
    <string name="idea">Idea</string>
    <string name="feedback_hint">Enter your message here&#8230;</string>
    <string name="sign_in_name">Let’s sign in!</string>
    <string name="sign_in_email">Tap here to sign in and get more features.</string>
    <string name="gem_dialog_hint"><b>Get a bonus free magazine issue!</b> Recommend me to <b>three friends</b>, and ask them all to send gems to you!</string>
    <string name="gem_dialog_title"> Bonus!</string>
    <string name="throw_button_title">Send a Gem</string>
    <string name="share_button_title">Recommend Me</string>
</resources>