<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_general">
        <ListPreference
            android:defaultValue="fa"
            android:entries="@array/pref_item_language"
            android:entryValues="@array/pref_item_language_values"
            android:key="locale"
            android:title="@string/pref_title_language" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_playback_options">
        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_volume_buttons_behaviour_list_titles"
            android:entryValues="@array/pref_volume_buttons_behaviour_list_values"
            android:key="volume_controls_behaviour"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_navigate_audio_with_volume_buttons" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_volume_buttons_behaviour_list_titles"
            android:entryValues="@array/pref_volume_buttons_behaviour_list_values"
            android:key="shake_behaviour"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_shake_to_pause_playback" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_program">
        <ListPreference
            android:defaultValue="8"
            android:entries="@array/pref_item_practice_count"
            android:entryValues="@array/pref_item_practice_count_values"
            android:key="repeat_count"
            android:title="@string/pref_title_item_practice_count" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_notification_options">
        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_sound_enabled"
            android:title="@string/pref_title_sound_enabled" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notification_sound_enabled"
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:showSilent="false"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="notification_vibrate_enabled"
            android:title="@string/pref_title_vibrate_enabled" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Advanced Settings">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:defaultValue="@string/pref_default_server_address"
            android:inputType="textUri"
            android:key="server_address"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_server_address" />
    </PreferenceCategory>
</PreferenceScreen>
