<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_lock"
        android:icon="@android:drawable/ic_lock_idle_lock"
        android:title="@string/lock"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_unlock"
        android:icon="@android:drawable/ic_lock_idle_lock"
        android:title="@string/unlock"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>