<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="me.ali.coolenglishmagazine.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="me.ali.coolenglishmagazine.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@android:drawable/stat_notify_more"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="me.ali.coolenglishmagazine.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
