<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/about_horizontal_margin"
        android:paddingStart="@dimen/about_horizontal_margin"
        tools:context="me.ali.coolenglishmagazine.FeedbackFragment">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:paddingBottom="36dp"
            android:paddingTop="48dp"
            android:text="@string/feedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/feedback_title"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/feedback_hint"
            android:inputType="textMultiLine|textCapSentences|textLongMessage|textAutoComplete|textAutoCorrect"
            android:minLines="2" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checkedButton="@+id/bug_radio"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bug_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bug" />

            <RadioButton
                android:id="@+id/idea_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idea" />

            <RadioButton
                android:id="@+id/question_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="48dp"
            android:background="@android:color/transparent"
            tools:src="@mipmap/ic_launcher" />
    </LinearLayout>
</ScrollView>