<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp">

    <TextView
        android:id="@+id/app_name"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="28dp"
        android:paddingTop="@dimen/drawer_title_padding_top"
        android:text="@string/app_name"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/progress_bar"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:visibility="gone"
            app:cpv_animAutostart="false"
            app:cpv_color="@android:color/secondary_text_dark"
            app:cpv_indeterminate="true" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="42dp"
            android:layout_height="42dp"
            tools:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/sign_in_name"
                android:textColor="@color/primary_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/sign_in_email"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>