<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.ali.coolenglishmagazine.ReadAndListenActivity">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controllers" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/controllers"
        android:background="@drawable/half_gradient"></RelativeLayout>

    <ImageView
        android:id="@+id/background_mage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fullscreen_bg_gradient">

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/controllers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/startText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/text_view_margin"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="0:00"
                android:textColor="@android:color/white" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/startText"
                android:layout_toStartOf="@+id/endText" />

            <TextView
                android:id="@+id/endText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="1:16"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/skip_prev"
                android:src="@android:drawable/ic_media_rew" />

            <ImageView
                android:id="@+id/play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/play_pause"
                android:src="@android:drawable/ic_media_play" />

            <ImageView
                android:id="@+id/pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/play_pause"
                android:src="@android:drawable/ic_media_pause"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/skip_next"
                android:src="@android:drawable/ic_media_ff" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/webView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/key" />

</RelativeLayout>
